Changed Footer a bit

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -2,7 +2,7 @@
 
   <!-- Copyright -->
   <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Renārs Abeļūns
+    © 2021 Renārs AbeļūnsDDDD
   </div>
   <!-- Copyright -->
 </footer>
