Created User authentication

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -24,10 +24,17 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex">
+      <!--<form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form>-->
+     <p style = "color:white"> <%=current_user.username%> </p>       
+       <%if current_user %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <%else%>
+            <%= link_to 'Sign Up', new_user_registration_path%>
+            <%= link_to 'Sign In', new_user_session_path%>
+        <%end%>
     </div>
   </div>
 </nav>
