--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,30 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.content %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<%= link_to 'New Task', new_task_path%>
+<br>
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<% @tasks.each do |task|%>
+  <div style="border: 1px solid black; background-color:blue;"></div>
+    <h3><%= task.title%></h3>
+    <%= time_ago_in_words(task.created_at)%> ago by <%= task.user.email%>
+    <br>
+
+      <%=link_to 'Edit', edit_task_path(task)%>
+      <%= link_to 'Destroy', task, method :delete, data: {confirm: 'Are you sure you want to delete this?'}%>
+
+      <%if task.answers.any?%>
+        <h4>Answers</h4>
+        <%= render task.answers%>
+      <%end%>
+
+      <hr>
+      <p>Add Answer</p>
+      <%= form_for ([task, task.answers.build]) do |f|%>
+        <%= f.text_area :content %>
+        <%= submit_tag "Add" %>
+      <%end%>
+  </div>
+<br>
+<br>
+<%end%>
