Added Tasks, new tasks can now be created and edited

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -28,7 +28,12 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>-->
-     <p style = "color:white"> <%=current_user.username%> </p>       
+     <p style = "color:white"> 
+     <%=
+     if user_signed_in?
+     current_user.username
+     end
+     %> </p>       
        <%if current_user %>
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         <%else%>
