--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,21 +6,22 @@
 
 <% @tasks.each do |task|%>
   <div style="border: 1px solid black; background-color:blue;"></div>
-    <h3><%= task.title%></h3>
+    <h3><%= task.content %></h3>
     <%= time_ago_in_words(task.created_at)%> ago by <%= task.user.email%>
     <br>
 
-      <%=link_to 'Edit', edit_task_path(task)%>
-      <%= link_to 'Destroy', task, method :delete, data: {confirm: 'Are you sure you want to delete this?'}%>
-
-      <%if task.answers.any?%>
+      <%= link_to 'Edit', edit_task_path(task)%>
+      <%#= link_to 'Destroy', task, method :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
+      <%#= link_to 'Destroy', task, method :delete, data: (confirm: 'Are you sure?' ) %>
+      <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%if task.answer.any?%>
         <h4>Answers</h4>
         <%= render task.answers%>
       <%end%>
 
       <hr>
       <p>Add Answer</p>
-      <%= form_for ([task, task.answers.build]) do |f|%>
+      <%= form_for ([task, task.answer.build]) do |f|%>
         <%= f.text_area :content %>
         <%= submit_tag "Add" %>
       <%end%>
