--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <h1>Tasks</h1>
+<%= flash[:alert] %>
 <%= link_to 'New Task', new_task_path%>
 <br>
 <br>
@@ -9,14 +10,15 @@
     <h3><%= task.content %></h3>
     <%= time_ago_in_words(task.created_at)%> ago by <%= task.user.email%>
     <br>
-
+    <% if can? :update, task%>
       <%= link_to 'Edit', edit_task_path(task)%>
-      <%#= link_to 'Destroy', task, method :delete, data: { confirm: 'Are you sure you want to delete this?' } %>
-      <%#= link_to 'Destroy', task, method :delete, data: (confirm: 'Are you sure?' ) %>
+    <%end%>
+    <% if can? :destroy, task%>
       <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%end%>
       <%if task.answer.any?%>
         <h4>Answers</h4>
-        <%= render task.answers%>
+        <%= render task.answer%>
       <%end%>
 
       <hr>
